--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -36,7 +36,10 @@
 </table>
 <script type="text/javascript"> //<![CDATA[
 	$(function(){
-		flowplayer(".player", "flowplayer/flowplayer-3.1.3.swf");
+		flowplayer(".player", "flowplayer/flowplayer-3.1.3.swf", {
+			clip: { provider: 'nginx' },
+			plugins: { nginx: { url: '/flowplayer.pseudostreaming-3.1.3.swf' } }
+		});
 		$(".player").click(function(){
 			$(".playing").removeClass("playing");
 			$(this).addClass("playing")
