--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -38,7 +38,7 @@
 	$(function(){
 		flowplayer(".player", "flowplayer/flowplayer-3.1.3.swf", {
 			clip: { provider: 'nginx' },
-			plugins: { nginx: { url: '/flowplayer.pseudostreaming-3.1.3.swf' } }
+			plugins: { nginx: { url: '/flowplayer/flowplayer.pseudostreaming-3.1.3.swf' } }
 		});
 		$(".player").click(function(){
 			$(".playing").removeClass("playing");
