--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -13,7 +13,7 @@
 <?r else ?>
 <table border='1'>
 	<thead>
-		<tr><th>date/time</th><td>CH</td><td>title</td><td>delete</td></tr>
+		<tr><th>date/time</th><td>CH</td><td>title</td><td>download / delete</td></tr>
 	</thead>
 	<tbody>
 		<?r @items.each do |item| ?>
@@ -22,13 +22,14 @@
 			<th>#{item[:date]} #{item[:hour]}:#{item[:min]}</th>
 			<td>#{item[:ch]}</td>
 			<td>
-				<div class="player" href="#{item[:filename]}">
-					<a href="#">#{item[:title]}</a>
+				<div class="player">
+					<a class="link" href="#{item[:filename]}">#{item[:title]}</a>
+					<a class="2x" href="#">2x</a>
 				</div>
 			</td>
 			<td>
-				<a href="#{item[:mpgname]}">download</a>
-				<button id="#{item[:filename]}" class='delete' name='delete'>delete</button>
+				<a class='download' href="#{item[:mpgname]}">download</a> / 
+				<a id="#{item[:filename]}" class='delete' href='#'>delete</a>
 			</td>
 		</tr>
 		<?r end ?>
@@ -36,15 +37,23 @@
 </table>
 <script type="text/javascript"> //<![CDATA[
 	$(function(){
-		flowplayer(".player", "flowplayer/flowplayer-3.1.3.swf", {
-			clip: { provider: 'nginx' },
-			plugins: { nginx: { url: '/flowplayer/flowplayer.pseudostreaming-3.1.3.swf' } }
+		$('.player').each(function(){
+			var container = $(this);
+			var url = $('a.link', this).attr('href');
+			container.flowplayer("flowplayer/flowplayer-3.1.3.swf", {
+				clip: { url: url, provider: 'nginx' },
+				plugins: { nginx: { url: '/flowplayer/flowplayer.pseudostreaming-3.1.3.swf' } }
+			});
 		});
-		$(".player").click(function(){
-			$(".playing").removeClass("playing");
-			$(this).addClass("playing")
+		$('a.link').click(function(){
+			$(".playing").removeClass("playing").removeClass("playing-2x");
+			$(this).parent().addClass("playing")
 		});
-		$('.delete').click(function(){
+		$('a.2x').click(function(){
+			$(".playing").removeClass("playing").removeClass("playing-2x");
+			$(this).parent().addClass("playing-2x")
+		});
+		$('a.delete').click(function(){
 			var fn = $(this).attr('id');
 			if (confirm("Delete " + fn + "?")) {
 			  document.location = '/delete?id=' + fn;
