--- a/view/layout.xhtml
+++ b/view/layout.xhtml
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>#{@title}</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" type="text/css" href="/mystyle.css" />
-		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+		<script type="text/javascript" src="/jquery.js"></script>
 		<script>//<![CDATA[
-			google.load("jquery", "1");
 			//]]></script>
 	</head>
 
