--- a/view/layout.xhtml
+++ b/view/layout.xhtml
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<meta charset="UTF-8" />
 		<title>#{@title}</title>
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" type="text/css" href="/mystyle.css" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="/mystyle.css" />
 		<script type="text/javascript" src="/jquery.js"></script>
 		<script>//<![CDATA[
 			//]]></script>
