--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -1,5 +1,12 @@
 <script type="text/javascript" src="/flowplayer/flowplayer-3.1.4.min.js"></script>
-<table border='1'>
+<div id='control'>
+	<button id='start'>|&lt;</button>
+	<button id='revL'>&lt;&lt;</button>
+	<button id='rev'>&lt;</button>
+	<button id='fwd'>&gt;</button>
+	<button id='fwdL'>&gt;&gt;</button>
+</div>
+<table id='list_table' border='1'>
 	<thead>
 		<tr><th>date/time</th><td>CH</td><td>title</td><td>download / delete</td></tr>
 	</thead>
@@ -25,6 +32,7 @@
 </table>
 <script type="text/javascript"> //<![CDATA[
 	$(function(){
+		var control = $('#control').remove();
 		$('.player').each(function(){
 			var container = $(this);
 			var url = $('a.link', this).attr('href');
@@ -32,14 +40,29 @@
 				clip: { url: url, provider: 'nginx' },
 				plugins: { nginx: { url: '/flowplayer/flowplayer.pseudostreaming-3.1.3.swf' } }
 			});
-		});
-		$('a.link').click(function(){
+		}).click(function(e){
+			//console.log( e.target );
 			$(".playing").removeClass("playing").removeClass("playing-2x");
-			$(this).parent().addClass("playing")
-		});
-		$('a.2x').click(function(){
-			$(".playing").removeClass("playing").removeClass("playing-2x");
-			$(this).parent().addClass("playing-2x")
+			if ("2x" == $(e.target).attr('class')) {
+				$(this).addClass("playing-2x")
+			} else {
+				$(this).addClass("playing")
+			}
+			$(this).after(control);
+			control.click(function(e){
+				var player = $f();
+				var time = player.getTime();
+				switch (e.target.id) {
+				case "start": time = 0.0; break;
+				case "revL": time -= 30.0; break;
+				case "rev": time -= 10.0; break;
+				case "fwd": time += 10.0; break;
+				case "fwdL": time += 30.0; break;
+				}
+				console.log(time);
+				player.seek(time);
+			});
 		});
 	});
-	//]]></script>
+//]]></script>
+<!-- vim: foldmethod=indent -->
