--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -6,7 +6,7 @@
 	<button id='fwd'>&gt;</button>
 	<button id='fwdL'>&gt;&gt;</button>
 </div>
-<table id='list_table' border='1'>
+<table id='list_table'>
 	<thead>
 		<tr>
 			<th><a href="/?sort=time">date/time</a></th>
