--- a/view/layout.xhtml
+++ b/view/layout.xhtml
@@ -6,7 +6,7 @@
 		<title>#{@title}</title>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="stylesheet" href="/mystyle.css" />
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script>//<![CDATA[
 			//]]></script>
 	</head>
@@ -21,6 +21,7 @@
 		</div>
 		<div id="footer">
 		</div>
+		<a href="http://www.ontvjapan.com/">ontv</a>
 	</body>
 
 </html>
