use static/local jquery for https reliability

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title= @title
     %link{:type=>'text/css', :rel=>'stylesheet', :href=>"/mystyle.css"}
-    %script{:type=>"text/javascript", :src=>"http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"}
+    %script{:type=>"text/javascript", :src=>"/jquery.js"}
   %body
     = yield
     %a{:href=>"http://www.ontvjapan.com/"} ontv
