make "delete" ajax.

--- a/views/index.haml
+++ b/views/index.haml
@@ -25,6 +25,6 @@
         %td
           %a.download{:href=>"#{item.mpgname}"} DL
           |
-          %a.delete{:href=>"/delete?pathname=#{item.flvname}"} delete
+          %a.delete{:href=>'#'} delete
 :javascript
   jQuery(function(){ run(); });
