--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,9 +1,9 @@
 !!!
 %html
   %head
-    %meta(:charset=>'utf-8')
+    %meta{:charset=>'utf-8'}
     %title= @title
-    %link{:type=>'text/css', :rel=>'stylesheet', :href=>"/mystyle.css"}
+    %link{:rel=>'stylesheet', :href=>"/mystyle.css"}
     %script{:type=>"text/javascript", :src=>"http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"}
   %body
     = yield
