--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,8 @@
-%script{:type=>"text/javascript", :src=>"/flowplayer/flowplayer-3.2.6.min.js"}
-%script{:type=>"text/javascript", :src=>"/index.js"}
+%script(type="text/javascript" src="/flowplayer/flowplayer-3.2.6.min.js")
+%script(type="text/javascript" src="/index.js")
 - unless loggedin?
-  %form{:action=>'/login', :method=>'post'}
-    %input{:type=>'submit', :value=>'login'}
+  %form(action='/login' method='post')
+    %input(type='submit' value='login')
 - else
   #control
     %button#start |&lt;
@@ -24,14 +24,14 @@
           %td= item.ch
           %td
             .player
-              %a.link{:href=>"#{item.flvname}"}= item.title
-              %a.2x{:href=>"#"} play 2x
+              %a.link(href="#{item.flvname}")= item.title
+              %a.2x(href="#") play 2x
           %td
             %span
-              %a.flv{:href=>"#{item.flvname}"} download flv
-              %a.mpg{:href=>"#{item.mpgname}"} download mpg
+              %a.flv(href="#{item.flvname}") download flv
+              %a.mpg(href="#{item.mpgname}") download mpg
             %button.delete DELETE
-  /#dialog-delete{:title=>'Delete Confirmation'}
+  /#dialog-delete(title='Delete Confirmation')
   /  %span Are you sure to delete?
   /  %button.delete DELETE
   /  %button CANCEL
