--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -27,9 +27,9 @@ table * { padding: 2px; }
 td, th { border: 1px solid; }
 
 /* control */
+.playbuttons {display:inline;}
 #control { text-align: center; }
 
 /* video cast elements */
-.player {display:inline;}
 .playing {display:block; width:400px; height:300px;}
 .playing-2x {display:block; width:800px; height:600px;}
