--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
-%script(type="text/javascript" src="/flowplayer/flowplayer-3.2.6.min.js")
-%script(type="text/javascript" src="/index.js")
+%script(src="/flowplayer/flowplayer-3.2.6.min.js")
+%script(src="/index.js")
 - unless loggedin?
   %form(action='/login' method='post')
     %input(type='submit' value='login')
