--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,12 +1,12 @@
 !!!
 %html
   %head
-    %meta{:charset=>'utf-8'}
+    %meta(charset='utf-8')
     %title= @title
-    %link{:rel=>'stylesheet', :href=>"/mystyle.css"}
-    %link{:rel=>'stylesheet', :href=>"http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css"}
-    %script{:type=>"text/javascript", :src=>"http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"}
-    %script{:type=>"text/javascript", :src=>'http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js'}
+    %link(rel='stylesheet' href="/mystyle.css")
+    %link(rel='stylesheet' href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css")
+    %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
+    %script(type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js')
   %body
     = yield
-    %a#ontv{:href=>"http://www.ontvjapan.com/"} ontv
+    %a#ontv(href="http://www.ontvjapan.com/") ontv
