--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,6 @@
+%link(rel='stylesheet' href="/video-js/video-js.css")
 %script(src="/flowplayer/flowplayer-3.2.6.min.js")
+%script(src="/video-js/video.js")
 %script(src="/index.js")
 - unless loggedin?
   %form(action='/login' method='post')
@@ -27,6 +29,12 @@
             %button.delete DELETE
   #videodialog.hidden
     #player.playing
+      %video.video-js(width=300 height=200)
+        %source(src="" type='video/mp4')
+        %object.vjs-flash-fallback(type="application/x-shockwave-flash" data="/flowplayer/flowplayer-3.2.7.swf" width=300 height=200)
+          %param(name="movie" value="/flowplayer/flowplayer-3.2.7.swf")
+          %param(name="allowfullscreen" value="true")
+          %param(name="flashvars" value="")
     #control
       %button#start |&lt;
       %button#revL  &lt;&lt;
