hide player initially

--- a/views/index.haml
+++ b/views/index.haml
@@ -25,7 +25,7 @@
               %a.url(href="#{item.url}") download
               %a.mpg(href="#{item.mpgname}") download mpg
             %button.delete DELETE
-  #videodialog
+  #videodialog.hidden
     #player.playing
     #control
       #progress.hidden
