enable progress bar

--- a/views/index.haml
+++ b/views/index.haml
@@ -28,7 +28,7 @@
   #videodialog.hidden
     #player.playing
     #control
-      #progress.hidden
+      #progress
       %span#seek
         %button#start.seek-first seek first
         %button#revL.seek-prev   seek prev long
